# creative-coding

./: Cargo.toml  dev.Dockerfile  docker-compose.yml  release.Dockerfile
docs/vault/: colors.convert.md  development.local.md  development.release.md  root.md
server/: Cargo.toml
server/src/: main.rs
server/src/generators/: mod.rs
server/src/generators/test_generator/: mod.rs
server/src/generators/types/: dimensions.rs
server/src/generators/util_generators/palette/: mod.rs
src/: main.rs
src/generators/: mod.rs
src/generators/test_generator/: mod.rs
src/generators/types/: dimensions.rs  mod.rs
src/generators/util_generators/: mod.rs
src/generators/util_generators/palette/: mod.rs
src/server/: generate_one_service.rs  info_service.rs  mod.rs
src/util/colors/: palette.rs
src/util/colors/palette/: mod.rs  weighted_palette.rs
