[package]
edition = "2021"
name = "creative-coding"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "creative-coding"
path = "src/main.rs"

[dependencies]
actix-web = "3.3.3"
base64 = "0.13.0"
colors = {path = "../lib/colors"}
fastrand = "1.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
skia-safe = "0.45.1"
strum = "0.23"
strum_macros = "0.23"
